--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 	</div>
 
 	<div class="card" id="output_div">
-		<div class="card-header p-3 mb-2 bg-primary text-white">
+		<div class="card-header p-3 mb-2">
 			Current Train Schedule
 		</div>
 		<div class="row">
-			<div class="col">Train Name</div>
-			<div class="col">Destination</div>
-			<div class="col">Frequency (min)</div>
-			<div class="col">Next Arrival</div>
-			<div class="col">Minutes Away</div>
+			<div class="col" id="name_output">Train Name</div>
+			<div class="col" id="destination_output">Destination</div>
+			<div class="col" id="frequency_output">Frequency (min)</div>
+			<div class="col" id="arrival_output">Next Arrival</div>
+			<div class="col" id="minaway_output">Minutes Away</div>
 		</div>
 	</div>
 
@@ -42,7 +42,9 @@
 			<label for="frequency">Frequency (min)</label>
 			<input type="frequency" class="form-control" id="frequency">
 		</div>
-		<button id="submit_button" type="submit" class="btn btn-primary">Submit</button>
+		<div id="submit"> 
+			<button id="submit_button" type="submit" class="btn">Submit</button>
+		</div>
 	</form>
 
 
